--- a/src/templates/address.html
+++ b/src/templates/address.html
@@ -1,7 +1,7 @@
 
 <div>
     <br/>
-    <H4 style="margin:5px">Address:<br/>{{xmr_address}}</H4>
+    <H4 style="margin:5px">Address:<br/>{{rmx_address}}</H4>
     <br/>
 
     {{#testnet}}
@@ -25,7 +25,7 @@
 
     <H4 style="margin:5px">
         Transactions:<br/> Sorry, its not possible to find txs associated with
-        normal addresses in Monero
+        normal addresses in Remix
     </H4>
 
     <br/>
