--- a/src/templates/my_outputs.html
+++ b/src/templates/my_outputs.html
@@ -32,12 +32,12 @@
 
     {{^tx_prove}}
         <h3>Checking which outputs belong to the given address and viewkey</h3>
-        <h5>address: {{xmr_address}}</h5>
+        <h5>address: {{rmx_address}}</h5>
         <h5>viewkey: {{viewkey}}</h5>
     {{/tx_prove}}
     {{#tx_prove}}
         <h3>Prove that you send this tx to the given address</h3>
-        <h5>address: {{xmr_address}}</h5>
+        <h5>address: {{rmx_address}}</h5>
         <h5>Tx private key: {{viewkey}}</h5>
     {{/tx_prove}}
 
@@ -68,9 +68,9 @@
         </table>
 
         <h3>
-            Sum XMR from matched outputs (i.e., incoming XMR):
+            Sum RMX from matched outputs (i.e., incoming RMX):
             {{#found_our_outputs}}
-                {{sum_xmr}}
+                {{sum_rmx}}
             {{/found_our_outputs}}
             {{^found_our_outputs}}
                 0.000000000000
@@ -141,7 +141,7 @@
 
         </div>
         <h3>
-            Sum XMR from matched and marked by * ring member's outputs: {{sum_mixin_xmr}}
+            Sum RMX from matched and marked by * ring member's outputs: {{sum_mixin_rmx}}
             <br/>
             <span style="font-size: 16px"> Possible spending is:
                 {{possible_spending}} (tx fee included)
