--- a/src/templates/css/style.css
+++ b/src/templates/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     color: white;
-    background-color: black;
+    background-color: rgb(99, 71, 221);
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -17,7 +17,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 tr, li, #pages, .info {
-    font-family: "Lucida Console", Monaco, monospace;
+    font-family: "Verdana", Geneva, sans-serif;
     font-size  : 12px;
     height: 22px;
 }
