--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -6,7 +6,7 @@
     {{#refresh}}
         <meta http-equiv="refresh" content="10">
     {{/refresh}}
-    <title>Onion Remix Blockchain Explorer</title>
+    <title>Remix Blockchain Explorer</title>
     <!--<link rel="stylesheet" type="text/css" href="/css/style.css">-->
     <style type="text/css">
         {{#css_styles}}{{/css_styles}}
@@ -19,8 +19,7 @@
 <div>
 
     <div class="center">
-        <h1 class="center"><a href="/">Onion Remix Blockchain Explorer</a></h1>
-        <h4 style="font-size: 15px; margin: 0px">({{^enable_js}}no javascript - {{/enable_js}}no cookies - no web analytics trackers - no images - open sourced)</h4>
+        <h1 class="center"><a href="/">Remix Blockchain Explorer</a></h1>
     </div>
 
 
