--- a/src/templates/index2.html
+++ b/src/templates/index2.html
@@ -28,7 +28,7 @@
             | <a href="{{mainnet_url}}">Go to mainnet explorer</a>
          {{/mainnet_url}}
          {{#testnet}}
-            | This is <span style="color:#ff6b62">testnet</span> blockchian
+            | You are looking at the <span style="color:#ff6b62">testnet</span> blockchain
          {{/testnet}}
 
         </h3>
