--- a/src/templates/css/style.css
+++ b/src/templates/css/style.css
@@ -2,7 +2,7 @@ body {
     margin: 0;
     padding: 0;
     color: white;
-    background-color: rgb(99, 71, 221);
+    background-color: #03a9f4;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -17,8 +17,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 tr, li, #pages, .info {
-    font-family: "Verdana", Geneva, sans-serif;
-    font-size  : 12px;
+    font-family: 'Roboto', Helvetica, Arial, sans-serif;
+    font-size  : 13px;
     height: 22px;
 }
 
