--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -23,7 +23,7 @@
         min-height: 60px;
     }
     .header, .footer{
-        background: #2f2f2f;
+        background: #0274a8;
     }
     .sidebar{
         min-height: 300px;
@@ -51,7 +51,7 @@
     }
 }
 </style>
-    </style>
+<head>
 
     {{#js_files}}{{/js_files}}
 
@@ -76,8 +76,3 @@
             </div>
     </div>
 
-    <div class="center">
-        
-    </div>
-
-</div>
