--- a/src/templates/css/style.css
+++ b/src/templates/css/style.css
@@ -1,141 +1,202 @@
-body {
-    margin: 0;
-    padding: 0;
-    color: white;
-    background-color: #03a9f4;
+.panel-explorer {
+    border-color: #336A80;
 }
 
-h1, h2, h3, h4, h5, h6 {
+.panel-explorer > .panel-heading {
+    color: #fff;
+    background-color: #336A80;
+    border-color: #336A80;
+    font-size: 16px;
+}
+
+.panel-tx {
+    word-wrap: break-word;
+    margin-top: 1em;
+}
+
+.panel-tx .row {
+    padding: 0.25em 15px;
+}
+
+.panel-tx .panel-heading {
+    margin-bottom: 0.5em;
+}
+
+.panel-tx>.row>div:nth-child(odd) {
+    font-weight: 500;
+    color: #336A80;
+    padding-right: 0;
+}
+
+.panel-tx>.row>div:nth-child(even) {
+    font-family: monospace;
+    font-size: 12px;
+}
+
+.panel-explorer .table-striped>tbody>tr:last-of-type>td:first-of-type,
+.panel-explorer .table-striped>tbody>tr:last-of-type>td:last-of-type {
+    -webkit-border-bottom-right-radius: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+    -moz-border-radius-bottomright: 4px;
+    -moz-border-radius-bottomleft: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
+}
+
+.table.tx-mixins {
+    background-color: transparent;
+}
+
+.table.tx-mixins tbody td {
+    border: 0;
+}
+
+.table.tx-mixins thead th {
+    border-bottom-color: #ddd;
+}
+
+.table .tx-mixins-container > td {
+    padding: 0 20px 8px;
+    border: none;
+}
+
+.tx-mixins-container {
+    display: none;
+}
+
+.tx-input {
+    cursor: pointer;
+}
+
+.tx-input:hover td {
+    background-color: #f0f0f0 !important;
+}
+
+#explorer {
+    font-size: 14px;
+}
+
+#explorer h1, #explorer h2, #explorer h3, #explorer h4, #explorer h5, #explorer h6 {
     text-align: center;
+    margin-top: 1.2em;
+    margin-bottom: 0.8em;
 }
 
-.center {
+#explorer h1 {
+    margin-top: 0.2em;
+    margin-bottom: 0.5em;
+}
+
+#explorer h2 {
+    font-size: 1.5em;
+}
+
+#explorer .center {
     margin: auto;
     width: 96%;
-    /*border: 1px solid #73AD21;
-    padding: 10px;*/
 }
 
-tr, li, #pages, .info {
-    font-family: 'Roboto', Helvetica, Arial, sans-serif;
-    font-size  : 13px;
+#explorer tbody tr, #explorer #pages {
+    font-family: "Lucida Console", Monaco, monospace;
+    font-size  : 12px;
+}
+
+#explorer #pages
+{
+    margin-top: 15px;
     height: 22px;
 }
 
-#pages
-{
-    margin-top: 15px;
-}
-
-td {
-    text-align: center;
-}
-
-a:link {
+#explorer a:link {
     text-decoration: none;
-    color: white;
 }
 
-a:visited {
+#explorer a:visited {
     text-decoration: none;
-    color: white;
 }
 
-a:hover {
-    text-decoration: underline;
-    color: white;
-}
-
-a:active {
+#explorer a:active {
     text-decoration: none;
-    color: white;
 }
 
-form {
-    display: inline-block;
-    text-align: center;
-}
-
-.style-1 input[type="text"] {
+#explorer .style-1 input[type="text"] {
     padding: 2px;
     border: solid 1px #dcdcdc;
     transition: box-shadow 0.3s, border 0.3s;
 }
-.style-1 input[type="text"]:focus,
-.style-1 input[type="text"].focus {
+#explorer .style-1 input[type="text"]:focus,
+#explorer .style-1 input[type="text"].focus {
     border: solid 1px #707070;
     box-shadow: 0 0 5px 1px #969696;
 }
 
-
-.tabs {
-    position: relative;
-    min-height: 220px; /* This part sucks */
-    clear: both;
-    margin: 25px 0;
+#explorer .table {
+    margin-bottom: 0;
 }
 
-.tab {
-    float: left;
+.panel-explorer .panel-body {
+    padding: 0;
 }
 
-.tab label {
-    background: black;
+.tab-content {
+    background: #fff;
+}
+
+.nav-tabs {
+    border-color: #336A80;
+}
+
+.nav-tabs>li>a {
+    border: 1px solid #a0a0a0;
+    border-bottom-color: #336A80;
+    background-color: #a0a0a0;
+    color: #fff;
+}
+
+.nav-tabs>li>a:hover {
+    border: 1px solid #336A80;
+    border-bottom-color: transparent;
+    background-color: #336A80;
+}
+
+.nav-tabs>li.active>a, .nav-tabs>li.active>a:hover, .nav-tabs>li.active>a:focus {
+    border: 1px solid #336A80;
+    border-bottom-color: transparent;
+    background-color: #336A80;
+    color: #fff;
+}
+
+.nav-tabs>li>a:hover {
+    border-bottom-color: #336A80;
+}
+
+.tx-tools .tab-content {
     padding: 10px;
-    border: 1px solid #ccc;
-    margin-left: -1px;
-    position: relative;
-    left: 1px;
+    border: 1px solid #336A80;
+    border-top: transparent;
+    -webkit-border-bottom-right-radius: 4px;
+    -webkit-border-bottom-left-radius: 4px;
+    -moz-border-radius-bottomright: 4px;
+    -moz-border-radius-bottomleft: 4px;
+    border-bottom-right-radius: 4px;
+    border-bottom-left-radius: 4px;
 }
 
-.tab [type=radio] {
-    display: none;
+#explorer-search {
+    margin-bottom: 1.5em;
 }
 
-.content {
-    position: absolute;
-    top: 28px;
-    left: 0;
-    background: black;
-    right: 0;
-    bottom: 0;
-    padding: 20px;
-    border: 1px solid #ccc;
+.btn-explorer {
+    color: #ffffff;
+    background-color: #336A80;
+    border-color: #336A80;
 }
 
-[type=radio]:checked ~ label {
-    background: #505050 ;
-    border-bottom: 1px solid white;
-    z-index: 2;
+.btn-explorer:hover {
+    color: #ffffff;
+    background-color: #134A60;
 }
 
-[type=radio]:checked ~ label ~ .content {
-    z-index: 1;
-}
-
-input#toggle-1[type=checkbox] {
-    position: absolute;
-    /*top: -9999px;*/
-    left: -9999px;
-
-}
-label#show-decoded-inputs {
-    /*-webkit-appearance: push-button;*/
-    /*-moz-appearance: button;*/
-    display: inline-block;
-    /*margin: 60px 0 10px 0;*/
-    cursor: pointer;
-    background-color: black;;
-    color: white;
-    width: 100%;
-    text-align: center;
-}
-
-div#decoded-inputs{
-    display: none;
-}
-
-/* Toggled State */
-input#toggle-1[type=checkbox]:checked ~ div#decoded-inputs {
-    display: block;
+#explorer .form-control {
+    border-color: #336A80;
 }
