--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -32,9 +32,9 @@
 </head>
 <body>
     <div id="explorer" class="container">
-        <h1 class="">Monero Blockchain Explorer</h1>
+        <h1 class="">Remix Blockchain Explorer</h1>
             
-            <form action="/explorer/search" method="get" id="explorer-search">
+            <form action="/search" method="get" id="explorer-search">
                 <div class="input-group">
                     <input class="form-control" type="text" name="value" placeholder="blk height, blk hash, tx hash, tx payment id, encrypted payment id, tx public key, input key image, stealth address, and datetime">
                         <span class="input-group-btn">
