--- a/src/templates/css/style.css
+++ b/src/templates/css/style.css
@@ -2,10 +2,10 @@
 @import url(//fonts.googleapis.com/css?family=Roboto:400,300,500);
 
 a {
-  color: #03a678;
+  color: #014e71;
 }
 a:hover {
-  color: #025b42;
+  color: #428bca;
 }
 body {
   font-size: 14px;
@@ -35,13 +35,13 @@ h3,
   margin-bottom: 14px;
 }
 .panel-explorer {
-    border-color: #336A80;
+    border-color: #0274a8;
 }
 
 .panel-explorer > .panel-heading {
     color: #fff;
-    background-color: #336A80;
-    border-color: #336A80;
+    background-color: #0274a8;
+    border-color: #0274a8;
     font-size: 16px;
 }
 
